# market-data-source

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  README.md  TODO.md  codebase-review-report.md  deny.toml  pyproject.toml  test-server.ps1  test_seed.py  test_seed_comprehensive.py
.claude/commands/: release-next-version.md
.github/: PUBLISHING.md
.github/workflows/: publish.yml  python-test.yml  quality.yml  release-automation.yml  release.yml  test-publish.yml  test.yml  version-check.yml
PRPs/: 03-generator-config.md  04-generator-struct.md  06-timestamp-generation.md  09-unit-tests.md  11-serde-serialization.md  12-csv-export.md  15-png-chart-export.md  20-python-bindings.md  22-crates-io-metadata-setup.md  24-changelog-and-documentation.md  25-ci-cd-foundation.md  27-release-automation-workflow.md  28-regime-detection-foundation.md  29-regime-transition-engine.md  30-dynamic-parameter-scheduler.md  31-parameter-update-api.md  32-fama-french-foundation.md  33-capm-implementation.md  34-apt-model-framework.md  35-garch-volatility-model.md  36-mean-reversion-algorithm.md  37-jump-diffusion-model.md  38-yahoo-finance-adapter.md  39-alpha-vantage-adapter.md  40-data-source-abstraction.md  41-tick-data-generator.md  42-order-book-simulation.md  43-tick-aggregation-engine.md  44-bond-data-generator.md  45-commodity-futures-generator.md  46-forex-pair-generator.md  47-multi-asset-portfolio.md  48-sector-rotation-model.md  49-market-breadth-indicators.md  50-economic-indicators.md  51-options-pricing-engine.md  52-volatility-surface-generator.md  53-options-strategies.md  54-crypto-market-generator.md  55-defi-protocol-simulation.md  (+3 more)
PRPs/completed/: 01-library-structure.md  02-core-data-types.md  05-random-walk-algorithm.md  07-volume-generation.md  08-basic-example.md  10-integration-test.md  13-json-export.md  14-couchdb-export.md  16-export-module-structure.md  17-export-examples.md  18-export-integration-tests.md  19-financial-precision-types.md  21-pre-publication-code-quality.md  23-pypi-metadata-alignment.md  26-trusted-publishing-setup.md
docs/: PUBLISHING_STRATEGY.md  PYTHON_SETUP.md  RELEASE.md  SMART_DEFAULTS.md
examples/: basic.rs  export_all.rs  export_charts.rs  export_couchdb.rs  export_csv.rs  export_json.rs  server_client.rs  server_demo.rs  test_minimal_config.rs
examples/python/: basic_usage.py  pandas_integration.py
market-data-source/: Cargo.toml
market-data-source-python/: Cargo.toml  README.md  TODO.md  pyproject.toml
market-data-source-python/src/: lib.rs
market_data_source/: Cargo.toml
python/market_data_source/: __init__.py  __init__.pyi
scripts/: generate-changelog.bat  generate-changelog.py  generate-changelog.sh  prepare-release.py  sync-version.py  sync-version.sh
src/: config.rs  env.rs  generator.rs  lib.rs  python.rs  test_helpers.rs  types.rs
src/algorithms/: mod.rs  random_walk.rs
src/export/: chart.rs  couchdb.rs  csv.rs  error.rs  json.rs  mod.rs
src/regimes/: controller.rs  detector.rs  mod.rs  statistics.rs  volatility.rs
src/server/: config.rs  mod.rs  routes.rs  state.rs  websocket.rs
src/server/api/: handlers.rs  mod.rs  models.rs  openapi.rs
tests/: couchdb_export_test.rs  csv_export_test.rs  export_integration.rs  json_export_test.rs  png_export_test.rs  regime_control_integration.rs  test-server.ps1  test-websocket.js
tests/python/: test_generator.py
