[workspace]
members = ["market_data_source", "market-data-source-python"]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
repository = "https://github.com/destenson/market-data-source.git"
authors = ["Market Data Source Contributors"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rust_decimal = { version = "1.37.2", features = ["serde", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.27.0" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Internal dependencies
market_data_source = { path = "./market_data_source" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
debug = false
incremental = false
rpath = false
