[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "market-data-source"
version = "0.3.0"
description = "High-performance financial data generation with Python bindings. Rust-powered market data simulation for Python data scientists and quantitative researchers."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Market Data Source Contributors" }
]
maintainers = [
    { name = "Market Data Source Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "market-data",
    "synthetic-data",
    "financial-data",
    "trading",
    "backtesting",
    "quantitative-finance",
    "ohlc",
    "tick-data"
]

[project.urls]
Homepage = "https://github.com/destenson/market-data-source"
Documentation = "https://github.com/destenson/market-data-source#readme"
Repository = "https://github.com/destenson/market-data-source"
Issues = "https://github.com/destenson/market-data-source/issues"

[tool.maturin]
features = ["python", "synthetic"]
module-name = "market_data_source"
manifest-path = "market-data-source-python/Cargo.toml"
exclude = [
    "*.sh",
    "*.py",
    ".claude/*",
    ".github/*",
    ".vscode/*",
    ".pre-commit-config.yaml",
    "CLAUDE.md",
    "PRPs/*",
    "codebase*report.md",
    "deny.toml",
    "scripts/*"

]

# Feature variants for different capabilities
[tool.maturin.feature-set]
synthetic = ["python", "synthetic"]
live = ["python", "live"]
api-emulator = ["python", "api-emulator"]
api-bridge = ["python", "api-bridge"]
full = ["python", "synthetic", "live", "api-emulator", "api-bridge"]
