[package]
name = "market-data-source-python"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for market-data-source - High-performance financial data generation"
homepage = "https://github.com/destenson/market-data-source"
publish = false  # This crate is not published to crates.io

[features]
default = ["python", "synthetic"]
synthetic = ["market-data-source/synthetic"]
python = []  # Python bindings feature

[lib]
name = "market_data_source"
crate-type = ["cdylib"]

[dependencies]
market-data-source = { path = "..", features = ["synthetic"] }
pyo3 = { version = "0.23", features = ["extension-module", "chrono"] }
rust_decimal = { workspace = true }
